tempfile/derivative/tests/compile-fail/unknown-attribute.stderr
error: Unknown attribute `does_not_exist` for trait `Clone`
 --> $DIR/unknown-attribute.rs:8:22
  |
8 | #[derivative(Clone = "does_not_exist")]
  |                      ^^^^^^^^^^^^^^^^

error: Unknown attribute `does_not_exist` for trait `Clone`
  --> $DIR/unknown-attribute.rs:12:20
   |
12 | #[derivative(Clone(does_not_exist = "true"))]
   |                    ^^^^^^^^^^^^^^
